bdr.BDR.scala.error
Compilation error:
BDR:4: error: not found: value x
  x=getIndication();
  ^BDR:6: error: not found: value x
  if(x="R"){
     ^BDR:10: error: not found: value x
  else if(x="L"){
          ^BDR:14: error: not found: value x
  else if(x="I"){
          ^BDR:19: error: not found: value x
  else if(x="A"){
          ^BDR:22: error: not found: value x
  else if(x="B"){
          ^BDR:26: error: not found: value x
  else if(x="C"){
          ^BDR:31: error: not found: value x
  else if(x="Z"){
          ^BDR:34: error: not found: value x
  else if(x="Y"){
          ^BDR:38: error: not found: value x
  else if(x="X"){
          ^